# fun

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
_build/: CMakeCache.txt  Makefile  cmake_install.cmake  funExampleTests
